Index: ChangeLog 2002-03-12  Geoffrey Keating  <geoffk@redhat.com>
	* Makefile.in (GTFILES): Add @all_gtfiles@.
	* configure: Regenerate.
	* configure.in: Construct all_gtfiles from the gtfiles definitions
	in config-lang.in.
	* gengtype-yacc.y (type): Warn about duplicate structure names.
	* gengtype.c (get_output_file): Handle .c files in language
	subdirectories.

Index: cp/ChangeLog
2002-03-12  Geoffrey Keating  <geoffk@redhat.com>

	* Make-lang.in (cp/gt-decl.h): Generate using gengtype.
	(cp/decl.o): Add cp/gt-decl.h dependency.
	* config-lang.in (gtfiles): New.
	* tree.h: Rename struct binding_level to struct cp_binding_level.
	* decl.c: Rename struct binding_level to struct cp_binding_level.
	Include cp/gt-decl.h.
	(struct cp_binding_level): Use gengtype.
	(make_binding_level): Use GGC on struct cp_binding_level.
	(mark_binding_level): Use gt_ggc_m_cp_binding_level.
	(cxx_init_decl_processing): Mark free_binding_level as
	deletable.

Index: f/ChangeLog
2002-03-12  Geoffrey Keating  <geoffk@redhat.com>

	* Make-lang.in (f/gt-com.h): Build using gengtype.
	(com.o): Depend on f/gt-com.h.
	* com.c: Rename struct binding_level to f_binding_level.
	(struct f_binding_level): Use gengtype.
	(struct tree_ggc_tracker): Use gengtype.
	(mark_tracker_head): Use gt_ggc_m_tree_ggc_tracker.
	(make_binding_level): Use GGC.
	(mark_binding_level): Use gt_ggc_m_f_binding_level.
	(ffecom_init_decl_processing): Change free_binding_level
	to a deletable root.
	* config-lang.in (gtfiles): Define.
	* where.c: Strings need no longer be allocated in GCable memory;
	remove my change of 30 Dec 1999.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50711 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/pch-branch/gcc/Makefile.in
+++ b/pch-branch/gcc/Makefile.in
@@ -1775,8 +1775,9 @@ GTFILES = $(GCONFIG_H) \
   $(srcdir)/function.h  $(srcdir)/rtl.h $(srcdir)/optabs.h \
   $(srcdir)/except.c $(srcdir)/function.c $(srcdir)/integrate.c \
   $(srcdir)/stmt.c $(srcdir)/tree.c $(srcdir)/varasm.c \
+  $(out_file) \
   $(srcdir)/c-decl.c $(srcdir)/c-pragma.c \
-  $(out_file)
+  @all_gtfiles@
 
 gtype-desc.h gtype-desc.c gtype-c.h gt-except.h gt-function.h : s-gtype; @true
 gt-integrate.h gt-stmt.h gt-tree.h gt-varasm.h : s-gtype; @true
