--- a/pch-branch/gcc/cp/config-lang.in
+++ b/pch-branch/gcc/cp/config-lang.in
@@ -33,3 +33,5 @@ compilers="cc1plus\$(exeext)"
 stagestuff="g++\$(exeext) g++-cross\$(exeext) cc1plus\$(exeext)"
 
 target_libs="${libstdcxx_version} target-gperf"
+
+gtfiles="\$(srcdir)/cp/decl.c"
