--- a/pch-branch/gcc/Makefile.in
+++ b/pch-branch/gcc/Makefile.in
@@ -1300,7 +1300,8 @@ dumpvers: dumpvers.c
 version.o: version.c version.h
 
 gtype-desc.o: gtype-desc.c $(CONFIG_H) $(SYSTEM_H) varray.h $(TREE_H) \
-	$(RTL_H) function.h insn-config.h expr.h $(OPTABS_H) $(GGC_H)
+	$(RTL_H) function.h insn-config.h expr.h $(OPTABS_H) $(GGC_H) \
+	libfuncs.h
 
 ggc-common.o: ggc-common.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) \
 	flags.h $(GGC_H) varray.h hash.h $(HASHTAB_H) $(TM_P_H)
@@ -1773,14 +1774,18 @@ s-preds: genpreds$(build_exeext) $(srcdir)/move-if-change
 
 GTFILES = $(GCONFIG_H) \
   $(srcdir)/function.h  $(srcdir)/rtl.h $(srcdir)/optabs.h \
+  $(srcdir)/tree.h $(srcdir)/libfuncs.h \
   $(srcdir)/except.c $(srcdir)/function.c $(srcdir)/integrate.c \
   $(srcdir)/stmt.c $(srcdir)/tree.c $(srcdir)/varasm.c \
+  $(srcdir)/emit-rtl.c $(srcdir)/explow.c $(srcdir)/stor-layout.c \
+  $(srcdir)/regclass.c $(srcdir)/lists.c \
   $(out_file) \
   $(srcdir)/c-decl.c $(srcdir)/c-pragma.c \
   @all_gtfiles@
 
 gtype-desc.h gtype-desc.c gtype-c.h gt-except.h gt-function.h : s-gtype; @true
-gt-integrate.h gt-stmt.h gt-tree.h gt-varasm.h : s-gtype; @true
+gt-integrate.h gt-stmt.h gt-tree.h gt-varasm.h gt-emit-rtl.h : s-gtype; @true
+gt-explow.h gt-stor-layout.h gt-regclass.h gt-lists.h : s-gtype; @true
 gt-c-decl.h gt-c-pragma.h : s-gtype; @true
 
 s-gtype: gengtype$(build_exeext) $(GTFILES)
