* c-decl.c: Include c-pragma.h.         (start_decl, start_function): Invoke maybe_apply_pragma_weak.         (finish_function): Tidy.         * c-pragma.c: Include c-common.h.         (pending_weaks, apply_pragma_weak, maybe_apply_pragma_weak): New.         (handle_pragma_weak): Use them.         (init_pragma): Register pending_weaks.         * c-pragma.h (maybe_apply_pragma_weak): Declare.         * print-tree.c (print_node): Print DECL_WEAK.         * varasm.c (mark_weak_decls): Remove.         (remove_from_pending_weak_list): Remove.         (add_weak): Remove.         (asm_emit_uninitialised): Call globalize_decl for weak commons.         (weak_decls): Make a tree_list.         (declare_weak): Cons weak_decls directly.         (globalize_decl): Remove weak_decls elements directly.         (weak_finish): Simplify weak_decls walk.  Don't weaken unused         symbols.  Don't pretend to handle aliases.         (init_varasm_once): Update weak_decls registry. 	* Makefile.in: Update dependencies.
        * cp/decl.c: Include c-pragma.h.
        (start_decl, start_function): Invoke maybe_apply_pragma_weak.
	* cp/Make-lang.in: Update dependencies.

	* gcc.dg/weak-1.c: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50797 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1148,7 +1148,7 @@ $(srcdir)/c-parse.y: c-parse.in
 
 c-decl.o : c-decl.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) $(C_TREE_H) \
     $(GGC_H) $(TARGET_H) c-lex.h flags.h function.h output.h $(EXPR_H) \
-    debug.h toplev.h intl.h $(TM_P_H) tree-inline.h $(TIMEVAR_H)
+    debug.h toplev.h intl.h $(TM_P_H) tree-inline.h $(TIMEVAR_H) c-pragma.h
 c-typeck.o : c-typeck.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
     $(TARGET_H) flags.h intl.h output.h $(EXPR_H) $(RTL_H) toplev.h $(TM_P_H)
 c-lang.o : c-lang.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
@@ -1165,7 +1165,7 @@ c-aux-info.o : c-aux-info.c  $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
     flags.h toplev.h
 c-convert.o : c-convert.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h toplev.h
 c-pragma.o: c-pragma.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) function.h \
-    c-pragma.h toplev.h output.h $(GGC_H) $(TM_P_H)
+    c-pragma.h toplev.h output.h $(GGC_H) $(TM_P_H) $(C_COMMON_H)
 mbchar.o: mbchar.c $(CONFIG_H) $(SYSTEM_H) mbchar.h
 graph.o: graph.c $(CONFIG_H) $(SYSTEM_H) toplev.h flags.h output.h $(RTL_H) \
     function.h hard-reg-set.h $(BASIC_BLOCK_H) graph.h
