--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Fri Mar 15 12:35:27 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
+
+	* bb-reorder.c (find_traces_1_round): Don't rotate loop
+	whose first bb is bb 0.
+
+	* bb-reorder.c: documentation
+
 Wed Mar 13 21:02:16 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Merge from mainline (cfg-merge-20021203 tag).
