* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50877 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Sat Mar 16 13:09:57 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
+
 Fri Mar 15 12:35:27 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
 
 	* bb-reorder.c (find_traces_1_round): Don't rotate loop
